--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,4 +53,5 @@ pkg_check_modules(DEPS REQUIRED ${MODULES_TO_CHECK})
 add_subdirectory(src)
 add_subdirectory(po)
 add_subdirectory(data)
+add_subdirectory(data/icons)
 
