--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -85,8 +85,9 @@ if (HAS_PLANK)
 	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAS_PLANK " )
 	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAS_PLANK " )
 endif ()
+set (COMPILE_OPTIONS ${COMPILE_OPTIONS} -g )
 
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGMENU_I_KNOW_THIS_IS_UNSTABLE " )
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGMENU_I_KNOW_THIS_IS_UNSTABLE -g " )
 
 vala_precompile(VALA_C panther_launcher
 	${APP_SOURCES}
