--- a/panther_applet/Makefile
+++ b/panther_applet/Makefile
@@ -3,17 +3,11 @@ SONAME = libpantherapplet
 CC = gcc -c -fPIC
 LN = gcc -shared -Wl,-soname,$SONAME
 
-libpantherapplet.so: panther_applet.o dbus.o
-	$(LN) -o libpantherapplet.so panther_applet.o dbus.o  `pkg-config --libs gtk+-3.0 libpanel-applet gio-2.0 gio-unix-2.0`
+libpantherapplet.so: panther_applet.o
+	$(LN) -o libpantherapplet.so panther_applet.o  `pkg-config --libs gtk+-3.0 libpanel-applet`
 
-panther_applet.o: panther_applet.c dbus.h
+panther_applet.o: panther_applet.c
 	$(CC) -o panther_applet.o panther_applet.c `pkg-config --cflags gtk+-3.0 libpanel-applet`
-
-dbus.c dbus.h: gdbus.xml
-	gdbus-codegen --c-generate-object-manager --generate-c-code dbus gdbus.xml
-
-dbus.o: dbus.c dbus.h
-	$(CC) -o dbus.o dbus.c `pkg-config --cflags gio-2.0 gio-unix-2.0`
 
 install: libpantherapplet.so
 	mkdir -p /usr/lib/gnome-panel/5.0/
@@ -21,4 +15,4 @@ install: libpantherapplet.so
 	cp panther_launcher.panel-applet /usr/share/gnome-panel/5.0/applets/
 
 clean:
-	rm -f *.o dbus.c dbus.h libpantherapplet.so
+	rm -f *.o libpantherapplet.so
