--- a/po/CMakeLists.txt
+++ b/po/CMakeLists.txt
@@ -3,4 +3,4 @@
 
 include (Translations)
 add_translations_directory("panther_launcher")
-add_translations_catalog("panther_launcher" ../src )
+add_translations_catalog("panther_launcher" ../src/Backend ../src ../src/Widgets ../src/synapse-core ../src/synapse-plugins )
