--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,9 +89,8 @@ if (HAS_PLANK)
 	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAS_PLANK " )
 	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAS_PLANK " )
 endif ()
-set (COMPILE_OPTIONS ${COMPILE_OPTIONS} -g )
 
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGMENU_I_KNOW_THIS_IS_UNSTABLE -g " )
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGMENU_I_KNOW_THIS_IS_UNSTABLE " )
 
 vala_precompile(VALA_C panther_launcher
 	${APP_SOURCES}
