--- a/panther_applet/CMakeLists.txt
+++ b/panther_applet/CMakeLists.txt
@@ -1,4 +1,7 @@
 ### CMakeLists automatically created with AutoVala
 ### Do not edit
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/applet.txt)
+if (NOT DISABLE_FLASHBACK)
+	include(${CMAKE_CURRENT_SOURCE_DIR}/applet.txt)
+endif ()
+
