--- a/panther_applet/panther_launcher.panel-applet.in
+++ b/panther_applet/panther_launcher.panel-applet.in
@@ -1,11 +1,10 @@
 [Applet Factory]
 Id=PantherAppletFactory
-Location=/usr/lib/gnome-panel/5.0/libpantherapplet.so
+Location=@libdir@/gnome-panel/5.0/libpantherapplet.so
 Name=Panther Launcher applet
 Description=Factory for the window navigation related applets
 InProcess=true
 
 [PantherApplet]
 Name=panther launcher
-Description=Shows the panther app launcher (a forf of Slingshot, from ElementaryOS)
-
+Description=Shows the panther app launcher (a fork of Slingshot, from elementary OS)
