Added support for MATE desktop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,12 @@ option(ICON_UPDATE "Update the icon cache after installing" ON)
 option(BUILD_VALADOC "Build API documentation if Valadoc is available" OFF)
 option(HAVE_ZEITGEIST "HAVE_ZEITGEIST" OFF)
 option(HAS_PLANK "HAS_PLANK" OFF)
-option(EXCLUDE_FLASHBACK "EXCLUDE_FLASHBACK" OFF)
+option(DISABLE_FLASHBACK "DISABLE_FLASHBACK" OFF)
+option(DISABLE_MATE "DISABLE_MATE" OFF)
+
+if( NOT CMAKE_BUILD_TYPE )
+	set(CMAKE_BUILD_TYPE Release)
+endif()
 
 include(GNUInstallDirs)
 if( ( ${CMAKE_INSTALL_PREFIX} MATCHES "^/usr/local" ) )
@@ -53,9 +58,14 @@ set(MODULES_TO_CHECK ${MODULES_TO_CHECK} x11)
 
 pkg_check_modules(DEPS REQUIRED ${MODULES_TO_CHECK})
 
-if (NOT EXCLUDE_FLASHBACK)
+if (NOT DISABLE_FLASHBACK)
 	if ( (NOT EXISTS "/usr/lib/pkgconfig/libpanel-applet.pc") AND (NOT EXISTS "/usr/lib64/pkgconfig/libpanel-applet.pc"))
 	message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libpanel-applet.pc /usr/lib64/pkgconfig/libpanel-applet.pc")
+endif()
+endif ()
+if (NOT DISABLE_MATE)
+	if ( (NOT EXISTS "/usr/lib/x86_64-linux-gnu/pkgconfig/libmatepanelapplet-4.0.pc") AND (NOT EXISTS "/usr/lib/i386-linux-gnu/pkgconfig/libmatepanelapplet-4.0.pc"))
+	message(FATAL_ERROR "Can't find any of the files /usr/lib/x86_64-linux-gnu/pkgconfig/libmatepanelapplet-4.0.pc /usr/lib/i386-linux-gnu/pkgconfig/libmatepanelapplet-4.0.pc")
 endif()
 endif ()
 
@@ -67,6 +77,7 @@ add_subdirectory(panther_applet)
 add_subdirectory(data)
 add_subdirectory(src/synapse-plugins)
 add_subdirectory(data/icons)
+add_subdirectory(panther_mate)
 add_subdirectory(panther_gnome_shell)
 add_subdirectory(src/Widgets)
 add_subdirectory(src)
