--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,13 +89,23 @@ if (HAS_PLANK)
 	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAS_PLANK " )
 	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAS_PLANK " )
 endif ()
-if (EXCLUDE_FLASHBACK)
-	set (COMPILE_OPTIONS ${COMPILE_OPTIONS} -D EXCLUDE_FLASHBACK)
-	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DEXCLUDE_FLASHBACK " )
-	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DEXCLUDE_FLASHBACK " )
+if (DISABLE_FLASHBACK)
+	set (COMPILE_OPTIONS ${COMPILE_OPTIONS} -D DISABLE_FLASHBACK)
+	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISABLE_FLASHBACK " )
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDISABLE_FLASHBACK " )
+endif ()
+if (DISABLE_MATE)
+	set (COMPILE_OPTIONS ${COMPILE_OPTIONS} -D DISABLE_MATE)
+	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDISABLE_MATE " )
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDISABLE_MATE " )
 endif ()
 
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGMENU_I_KNOW_THIS_IS_UNSTABLE " )
+if ((${CMAKE_BUILD_TYPE} STREQUAL "Debug") OR (${CMAKE_BUILD_TYPE} STREQUAL "RelWithDebInfo"))
+	set(COMPILE_OPTIONS ${COMPILE_OPTIONS} "-g")
+endif()
+
+
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGMENU_I_KNOW_THIS_IS_UNSTABLE" )
 
 vala_precompile(VALA_C panther_launcher
 	${APP_SOURCES}
