Added support for MATE desktop (Gtk3)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ option(BUILD_VALADOC "Build API documentation if Valadoc is available" OFF)
 option(HAVE_ZEITGEIST "HAVE_ZEITGEIST" OFF)
 option(HAS_PLANK "HAS_PLANK" OFF)
 option(DISABLE_FLASHBACK "DISABLE_FLASHBACK" OFF)
+option(DISABLE_MATE "DISABLE_MATE" OFF)
+
+if( NOT CMAKE_BUILD_TYPE )
+	set(CMAKE_BUILD_TYPE Release)
+endif()
 
 include(GNUInstallDirs)
 if( ( ${CMAKE_INSTALL_PREFIX} MATCHES "^/usr/local" ) )
@@ -58,6 +63,11 @@ if (NOT DISABLE_FLASHBACK)
 		message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libpanel-applet.pc /usr/lib64/pkgconfig/libpanel-applet.pc")
 endif()
 endif ()
+if (NOT DISABLE_MATE)
+	if ( (NOT EXISTS "/usr/lib/pkgconfig/libmatepanelapplet-4.0.pc") AND (NOT EXISTS "/usr/lib64/pkgconfig/libmatepanelapplet-4.0.pc"))
+	message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libmatepanelapplet-4.0.pc /usr/lib64/pkgconfig/libmatepanelapplet-4.0.pc")
+endif()
+endif ()
 
 
 add_subdirectory(src/Backend)
@@ -67,6 +77,7 @@ add_subdirectory(panther_applet)
 add_subdirectory(data)
 add_subdirectory(src/synapse-plugins)
 add_subdirectory(data/icons)
+add_subdirectory(panther_mate)
 add_subdirectory(panther_gnome_shell)
 add_subdirectory(src/Widgets)
 add_subdirectory(src)
