--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,12 +60,12 @@ pkg_check_modules(DEPS REQUIRED ${MODULES_TO_CHECK})
 
 if (NOT DISABLE_FLASHBACK)
 	if ( (NOT EXISTS "/usr/lib/pkgconfig/libpanel-applet.pc") AND (NOT EXISTS "/usr/lib64/pkgconfig/libpanel-applet.pc"))
-		message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libpanel-applet.pc /usr/lib64/pkgconfig/libpanel-applet.pc")
+	message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libpanel-applet.pc /usr/lib64/pkgconfig/libpanel-applet.pc")
 endif()
 endif ()
 if (NOT DISABLE_MATE)
-	if ( (NOT EXISTS "/usr/lib/pkgconfig/libmatepanelapplet-4.0.pc") AND (NOT EXISTS "/usr/lib64/pkgconfig/libmatepanelapplet-4.0.pc"))
-	message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libmatepanelapplet-4.0.pc /usr/lib64/pkgconfig/libmatepanelapplet-4.0.pc")
+	if ( (NOT EXISTS "/usr/lib/pkgconfig/libmatepanelapplet-4.0.pc") AND (NOT EXISTS "/usr/lib64/pkgconfig/libmatepanelapplet-4.0.pc") AND (NOT EXISTS "/usr/lib/x86_64-linux-gnu/pkgconfig/libmatepanelapplet-4.0.pc") AND (NOT EXISTS "/usr/lib/i386-linux-gnu/pkgconfig/libmatepanelapplet-4.0.pc"))
+	message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libmatepanelapplet-4.0.pc /usr/lib64/pkgconfig/libmatepanelapplet-4.0.pc /usr/lib/x86_64-linux-gnu/pkgconfig/libmatepanelapplet-4.0.pc /usr/lib/i386-linux-gnu/pkgconfig/libmatepanelapplet-4.0.pc")
 endif()
 endif ()
 
