--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ set(MODULES_TO_CHECK ${MODULES_TO_CHECK} libsoup-2.4)
 set(MODULES_TO_CHECK ${MODULES_TO_CHECK} pango)
 set(MODULES_TO_CHECK ${MODULES_TO_CHECK} pangocairo)
 set(MODULES_TO_CHECK ${MODULES_TO_CHECK} x11)
+set(MODULES_TO_CHECK ${MODULES_TO_CHECK} zeitgeist-2.0)
 
 pkg_check_modules(DEPS REQUIRED ${MODULES_TO_CHECK})
 
