--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ add_subdirectory(src/synapse-core)
 add_subdirectory(panther_applet)
 add_subdirectory(data)
 add_subdirectory(src/synapse-plugins)
+add_subdirectory(data/dbus)
 add_subdirectory(data/icons)
 add_subdirectory(panther_mate)
 add_subdirectory(panther_gnome_shell)
