--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,8 +58,8 @@ set(MODULES_TO_CHECK ${MODULES_TO_CHECK} zeitgeist-2.0)
 pkg_check_modules(DEPS REQUIRED ${MODULES_TO_CHECK})
 
 if (NOT DISABLE_FLASHBACK)
-	if ( (NOT EXISTS "/usr/lib/pkgconfig/libpanel-applet.pc") AND (NOT EXISTS "/usr/lib64/pkgconfig/libpanel-applet.pc") AND (NOT EXISTS "/usr/lib/x86_64-linux-gnu/pkgconfig/libpanel-applet.pc"))
-	message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libpanel-applet.pc /usr/lib64/pkgconfig/libpanel-applet.pc /usr/lib/x86_64-linux-gnu/pkgconfig/libpanel-applet.pc")
+	if ( (NOT EXISTS "/usr/lib/pkgconfig/libpanel-applet.pc") AND (NOT EXISTS "/usr/lib64/pkgconfig/libpanel-applet.pc") AND (NOT EXISTS "/usr/lib/x86_64-linux-gnu/pkgconfig/libpanel-applet.pc") AND (NOT EXISTS "/usr/lib/i386-linux-gnu/pkgconfig/libpanel-applet.pc"))
+	message(FATAL_ERROR "Can't find any of the files /usr/lib/pkgconfig/libpanel-applet.pc /usr/lib64/pkgconfig/libpanel-applet.pc /usr/lib/x86_64-linux-gnu/pkgconfig/libpanel-applet.pc /usr/lib/i386-linux-gnu/pkgconfig/libpanel-applet.pc")
 endif()
 endif ()
 if (NOT DISABLE_MATE)
